--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           persistence and scientific vision can make to human peace and progress."
           -- Indian Prime Minister Manmohan Singh</i></p>
     </section>
+
+    <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</h3>
   </main>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
